Added menger sponge fractal.

--- a/challenges/index.html
+++ b/challenges/index.html
@@ -3,6 +3,7 @@
 <body>
     <ul>
         <li><a href="challenges/001/">001 - Starfield</a></li>
+        <li><a href="challenges/002/">001 - Menger Sponge Fractal</a></li>
     </ul>
 </body>
 </html>
