--- a/challenges/index.html
+++ b/challenges/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
+
+  <head></head>
+
+  <body>
     <ul>
-        <li><a href="challenges/001/">001 - Starfield</a></li>
-        <li><a href="challenges/002/">001 - Menger Sponge Fractal</a></li>
+
+      <li><a href="challenges/001/">001 - Starfield</a></li>
+      <li><a href="challenges/002/">002 - Menger Sponge Fractal</a></li>
+      <li><a href="challenges/003/">003 - Snake Game</a></li>
+      <li><a href="challenges/004/">004 - Purple Rain</a></li>
     </ul>
-</body>
+
+  </body>
+
 </html>
